$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-38 (opened November 5, 2013)

	* DESCRIPTION: depends on permute >= 0.7-5.

	* permutest.cca: permutation test uses 'permute' package. The old
	interface was retained, and 'permutations' can be a single number
	or a permutation matrix (as previously), but now it can also be a
	how() object of the 'permute' package. The argument 'strata' was
	also retained, but it is planned to be deprecated in the future,
	and it is recommended that users switch to defining 'blocks' in
	how(). 
	
Version 2.1-37 (closed November 5, 2013)

	* anova.cca: added new function anova.ccalist() to compare a
	sequence of models. The function is still experimental ("proof of
	the concept") and unexported. If this stays in vegan, it should
	eventually be called from anova.cca(). This would bring along a
	change of API to anova.cca(object, ..., alpha=...): the dots must
	follow the first argument which turns of positional and partial
	matching of arguments so that the function can collect the "cca"
	models. We must decide whether the new function is worth such a
	change that can make life harder for ordinary users.

	One potential advantage is that the code in anova.ccaby* functions
	could be simplifed to a anova.ccabylist() calls.

	The function is based on calling permutest.cca for each model with
	identical permutations. We can then compare the change in model
	for each permutation and collect the test statistics for
	differences. This requires that the models really are nested so
	that residual deviance certainly decreases in bigger model
	(testing theory requires nesting, but this is commonly violated by
	users: here nesting is necessary). 

	* parellel: default cluster defined by setDefaultCluster() is no
	longer used in functions with parallel processing. Using default
	cluster would need querying an unexported environment
	parellel:::.reg, and this gives a NOTE in R CMD check.
