@@ -5,8 +5,8 @@ useDynLib(vegan)
 
 export(CCorA, MOStest, RsquareAdj, SSarrhenius, SSgitay, SSgleason,
 SSlomolino, adipart, adonis, anosim, beals, betadisper, betadiver,
-bgdispersal, bioenv, bstick, cIndexKM, calibrate, capscale, cascadeKM,
-cca, commsimulator, contribdiv, clamtest, commsim, decorana,
+bgdispersal, bioenv, bioenvdist, bstick, cIndexKM, calibrate, capscale,
+cascadeKM, cca, commsimulator, contribdiv, clamtest, commsim, decorana,
 decostand, designdist, coverscale, dispweight, dispindmorisita, distconnected,
 diversity, downweight, drarefy, eigengrad, eigenvals, envfit,
 estaccumR, estimateR, eventstar, factorfit, fisherfit, fitspecaccum,
